# recipe

./: .gitignore  APOLOGY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HELPERS_AUDIT.md  OS_UPGRADES_BRAINDUMP.md  PHASES.md  README.md  RECIPE_DEPENDENCY_MANAGEMENT.md  REQUIREMENTS.md  SYSTEM_VS_USER_RECIPES.md  WRITING_RECIPES.md
.github/workflows/: ci.yml
docs/man/: recipe-helpers.7  recipe-recipe.5  recipe.1
examples/: bash.rhai  core-utils.rhai  dev-tools.rhai  fd.rhai  foot.recipe  myapp.rhai  ripgrep.rhai  systemd-rpm.rhai  test-acquire.rhai  test-all-helpers.rhai  test-command.rhai  test-filesystem.rhai  test-http.rhai  test-install.rhai  test-io-env.rhai  wofi.recipe
examples/lib/: autotools.rhai  github.rhai  rpm.rhai
scripts/: build-apk.sh  podman-test.sh
src/: ast.rs  engine.rs  executor.rs  features.rs  lib.rs  logging.rs  parser.rs  recipe.rs  version.rs
src/core/: autofix.rs  build_deps.rs  context.rs  ctx.rs  deps.rs  events.rs  executor.rs  lifecycle.rs  lock.rs  lockfile.rs  mod.rs  output.rs  recipe_state.rs  runner.rs  version.rs
src/core/autofix/: mod.rs  parser.rs  patch.rs  prompt.rs
src/core/executor/private/: actions.rs  attempt.rs  flow.rs  mod.rs  reporting.rs  state.rs  tests.rs
src/core/lifecycle/: action.rs  cleanup.rs  commit.rs  lock.rs  mod.rs  state.rs  validation.rs  version_cmp.rs
src/core/output/: logging.rs  mod.rs  narration.rs
src/engine/: context.rs  deps.rs  lifecycle.rs  mod.rs  recipe_state.rs
src/engine/phases/: acquire.rs  build.rs  install.rs  mod.rs
src/engine/util/: command.rs  http.rs  mod.rs
src/executor/: acquire.rs  build.rs  cleanup.rs  configure.rs  context.rs  error.rs  install.rs  mod.rs  patch.rs  remove.rs  service.rs  util.rs
src/helpers/: acquire.rs  build.rs  cmd.rs  command.rs  disk.rs  env.rs  filesystem.rs  fs_utils.rs  git.rs  http.rs  install.rs  io.rs  llm.rs  log.rs  mod.rs  paths.rs  process.rs  progress.rs  shell.rs  torrent.rs
src/helpers/acquire/: download.rs  git.rs  http.rs  mod.rs  torrent.rs  verify.rs
src/helpers/acquire/http/: api.rs  mod.rs  tests.rs
src/helpers/install/: disk.rs  filesystem.rs  io.rs  mod.rs
src/helpers/internal/: cmd.rs  fs_utils.rs  hash.rs  mod.rs  progress.rs  url_utils.rs
src/helpers/util/: log.rs  mod.rs  process.rs  shell.rs  string.rs
src/llm/: config.rs  mod.rs  provider.rs  runner.rs
src/llm/providers/: claude.rs  codex.rs
tests/: audit_bugs.rs  autofix_loop.rs  e2e.rs  e2e_tests.rs  helpers.rs  integration.rs  llm_helpers.rs  regression.rs
tests/common/: container.rs  fixtures.rs  mod.rs
tests/e2e/: cli.rs  failures.rs  query.rs
tests/helpers/: filesystem.rs  network.rs
tests/integration/: extra.rs  lifecycle.rs
xtask/: Cargo.toml
xtask/src/: main.rs  vm.rs
