[package]
name = "levitate-recipe"
version = "0.1.0"
edition = "2024"
description = "Rhai-based package recipe executor for LevitateOS"
license = "MIT"
repository = "https://github.com/levitate-os/levitate-recipe"
homepage = "https://github.com/levitate-os/levitate-recipe"
documentation = "https://docs.rs/levitate-recipe"
readme = "README.md"
keywords = ["package-manager", "recipe", "rhai", "scripting", "build"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "recipe"
path = "src/bin/recipe.rs"

[dependencies]
rhai = { version = "1.19", features = ["sync"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
tempfile = "3"
num_cpus = "1.16"
glob = "0.3"
dirs = "5"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
fs2 = "0.4"
semver = "1"
owo-colors = "4"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
